[gd_scene load_steps=6 format=3 uid="uid://cok04r5y7s1ug"]

[ext_resource type="Script" uid="uid://cqfyi6yk58due" path="res://scenes/player.gd" id="1_7axq7"]
[ext_resource type="Texture2D" uid="uid://buja7iqn1v1ay" path="res://graphics/player.png" id="2_yicsx"]
[ext_resource type="PackedScene" uid="uid://byxlq7bbvbgk1" path="res://scenes/input_component.tscn" id="4_h8sbs"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7iqnj"]
radius = 17.0

[sub_resource type="CircleShape2D" id="CircleShape2D_q634b"]
radius = 112.46

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("input_component")]
motion_mode = 1
script = ExtResource("1_7axq7")
input_component = NodePath("InputComponent")
is_player = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_7iqnj")

[node name="ClippedCollision" type="CollisionPolygon2D" parent="."]
disabled = true

[node name="RemoteCollision" type="CollisionPolygon2D" parent="."]
disabled = true

[node name="visuals" type="Polygon2D" parent="."]
clip_children = 1
polygon = PackedVector2Array(-20, 20, -20, -20, 20, -20, 20, 20)

[node name="Sprite2D" type="Sprite2D" parent="visuals"]
texture = ExtResource("2_yicsx")

[node name="RemoteVisuals" type="Polygon2D" parent="."]
visible = false
clip_children = 1
polygon = PackedVector2Array(-20, 20, -20, -20, 20, -20, 20, 20)

[node name="Sprite2D" type="Sprite2D" parent="RemoteVisuals"]
texture = ExtResource("2_yicsx")

[node name="PortalProximity" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PortalProximity"]
shape = SubResource("CircleShape2D_q634b")

[node name="InputComponent" parent="." instance=ExtResource("4_h8sbs")]

[connection signal="area_entered" from="PortalProximity" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="PortalProximity" to="." method="_on_area_2d_area_exited"]
